force-app/main/default/objects/Dummy22__c/Dummy22__c.object-meta.xml
<CustomObject>
    <label>Dummy22</label>
    <nameField>
        <label>Dummy22 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy22</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>