force-app/main/default/objects/Dummy22__c/fields/FooBar056__c.field-meta.xml
<CustomField>
    <fullName>FooBar056__c</fullName>
    <label>FooBar056</label>
    <length>255</length>
    <type>Text</type>
</CustomField>