force-app/main/default/objects/Dummy22__c/fields/FooBar081__c.field-meta.xml
<CustomField>
    <fullName>FooBar081__c</fullName>
    <label>FooBar081</label>
    <length>255</length>
    <type>Text</type>
</CustomField>