force-app/main/default/objects/Dummy22__c/fields/FooBar138__c.field-meta.xml
<CustomField>
    <fullName>FooBar138__c</fullName>
    <label>FooBar138</label>
    <length>255</length>
    <type>Text</type>
</CustomField>